grammar.js
    source_file: ($) => repeat(choice($.statement, $.comment)),

    // Literals

    cast_expression: ($) =>
      prec.right(
        PREC.CAST,
        choice(
          seq(
            "(",
            choice(field("type", $._type), seq($._type, $.dimensions)),
            ")",
            field("value", $.expression),
          ),
          seq(
            field("value", $.expression),
            "as",
            choice(field("type", $._type), seq($._type, $.dimensions)),
          ),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["<", PREC.GENERIC + 1],
          [">", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          ["in", PREC.REL],
          ["==", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          [">>>", PREC.SHIFT],
          ["<=>", PREC.REL],
          ["?:", PREC.TERNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    parenthesized_expression: ($) =>
      prec(PREC.PARENS, seq("(", $.expression, ")")),

    method_invocation: ($) =>
      choice(
        $._simple_method_invocation,
        $._object_method_invocation,
        $._closure_method_invocation,
      ),

    _simple_method_invocation: ($) =>
      prec(
        PREC.CALL,
        seq(field("name", $.identifier), field("arguments", $.argument_list)),
      ),

    _object_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          optional(seq($.super, ".")),
          field("type_arguments", optional($.type_arguments)),
          field("name", $.identifier),
          choice(
            seq(
              field("arguments", $.argument_list),
              field("closure", optional($.closure)),
            ),
            field("arguments", $.argument_list),
            field("closure", $.closure),
          ),
        ),
      ),

    _closure_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          field("name", $.identifier),
          optional("("),
          field("closure", $.closure),
          optional(")"),
        ),
      ),

    argument_list: ($) => seq("(", commaSep($.expression), ")"),

    type_arguments: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(token.immediate("<"), commaSep(choice($._type, $.wildcard)), ">"),
      ),

    dimensions: ($) =>
      prec.right(repeat1(seq(repeat($._annotation), "[", "]"))),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => prec.right(seq($.expression, optional(";"))),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(seq("else", field("alternative", $.statement))),
        ),
      ),

    enhanced_for_statement: ($) =>
      seq(
        "for",
        "(",
        seq(
          optional($.modifiers),
          field("type", $._unannotated_type),
          $._variable_declarator_id,
          choice(":", "in"),
          field("value", $.expression),
        ),
        ")",
        field("body", $.statement),
      ),

    // Annotations

    _annotation: ($) => choice($.marker_annotation, $.annotation),

    _variable_declarator_list: ($) =>
      commaSep1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      prec.right(
        seq(
          $._variable_declarator_id,
          optional(seq("=", field("value", $._variable_initializer))),
        ),
      ),

    _variable_declarator_id: ($) => seq(field("name", $.identifier)),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _type: ($) =>
      prec.left(PREC.TYPE, choice($._unannotated_type, $.annotated_type)),

    _unannotated_type: ($) =>
      prec.right(PREC.TYPE, choice($._simple_type, $.array_type)),

    scoped_type_identifier: ($) =>
      prec.left(
        PREC.SCOPED_TYPE,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier,
          ),
          ".",
          repeat($._annotation),
          alias($.identifier, $.type_identifier),
        ),
      ),

    generic_type: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier,
          ),
          $.type_arguments,
        ),
      ),

    array_type: ($) =>
      seq(
        field("element", $._unannotated_type),
        field("dimensions", $.dimensions),
      ),

    boolean_type: () => "boolean",

    variable_declaration: ($) =>
      prec.right(
        PREC.DECL,
        seq(
          optional("final"),
          // repeat($._annotation),
          choice("def", "var", field("type", $._unannotated_type)),
          $._variable_declarator_list,
          optional(";"),
        ),
      ),

    identifier: () => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
