test/corpus/if_statement.test
================================================================================
binary comparison only
:skip
================================================================================
a < b
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
simple comparison
================================================================================
if (a < b) {}
--------------------------------------------------------------------------------
(source_file
  (if_statement
    (parenthesized_expression
      (binary_expression
        (identifier)
        (identifier)))
    (block)))

================================================================================
multiple comparisons
================================================================================
if (a < b || c == d) {}
--------------------------------------------------------------------------------
(source_file
  (if_statement
    (parenthesized_expression
      (binary_expression
        (binary_expression
          (identifier)
          (identifier))
        (binary_expression
          (identifier)
          (identifier))))
    (block)))
